styles/style.css
:root {
   --yellow: hsl(47,88%,63%);
   --white: hsl(0, 0%, 100%);
   --gray500: hsl(0, 0%, 42%);
   --gray950: hsl(0, 0%, 7%);
   --font-family: "Figtree", sans-serif;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--yellow);
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: var(--font-family);
    margin-top: 8rem;
}

.card {
    background-color: var(--white);
    border: 1px solid var(--gray950);
    border-radius: 1rem;
    box-shadow: 4px 10px 0 var(--gray950);
    overflow: hidden;
    display: grid;
    grid-template-rows: auto 1fr;
    max-width: 375px;
}

.card-img {
    width: 100%;
    border-radius: 1.5rem;
    padding: 1rem;
}

.card-content {
    display: grid;
    gap: 0.75rem;
    padding: 1rem;
}

.category {
    display: inline-block;
    background-color: var(--yellow);
    color: black;
    font-weight: bold;
    font-size: 0.75rem;
    width: fit-content;
    padding: 0.5rem;
    border-radius: 4px;
}

.date {
    font-size: 0.75rem;
    color: var(--gray500)
}

.title {
    font-size: 1.25rem;
    font-weight: 700;
    margin: 0;
}

.title:hover {
    color: var(--yellow);
    cursor: pointer;
}

.text {
    font-size: 1rem;
    color: var(--gray500);
    line-height: 1.5;
}

.author {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-top: 0.5rem;
    font-weight: bold;
}

.avatar {
    width: 2rem;
    height: 2rem;
    border-radius: 50%;
    object-fit: cover;
}

footer {
    margin-top: 2rem;
    font-size: 1rem;
    color: var(--gray950);
    text-align: center;
}

.attribution a {
    color: var(--gray950)
}

.attribution a:hover {
    color: var(--white);
    cursor: pointer;
}

@media (min-width: 320px) {
    .card {
        max-width: 300px;
    }
}

